cast-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-db
  labels:
    app: cast-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-db

  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
      - name: cast-db
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432 #port interne au conteneur pour les connexions locales dans le pod.
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: cast-db-data
      volumes:
      - name: cast-db-data
        persistentVolumeClaim:
          claimName: cast-db-pvc
