movie-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-db
  labels:
    app: movie-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
      - name: movie-db
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432 #port interne du conteneur
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: movie-db-data
      volumes:
      - name: movie-db-data
        persistentVolumeClaim:
          claimName: movie-db-pvc
