movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  labels:
    app: movie-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: julh62/jenkins-devops-exams-movie-service:latest
        ports:
        - containerPort: 8000
