cast-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-db
spec:
  selector:
    app: cast-db  # Le label du pod cast-db
  ports:
    - port: 5432  # Le port exposé par le service, le même que celui utilisé dans le conteneur PostgreSQL
      targetPort: 5432  # Le port sur lequel le pod écoute
