cast-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
spec:
  selector:
    app: cast-service
  ports:
  - protocol: TCP
    port: 8002 # Port externe exposé à l'extérieur du cluster
    targetPort: 8000 # Port interne sur lequel le service écoute dans le conteneur
  type: ClusterIP
