movie-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db
  namespace: default
spec:
  selector:
    app: movie-db  # Assurez-vous que cela correspond à l'étiquette de votre pod
  ports:
    - protocol: TCP
      port: 5432        # Port interne du service dans le cluster (à adapter selon votre configuration)
      targetPort: 5432   # Port exposé par le pod (assurez-vous que c'est bien le bon port)
  clusterIP: None       # Optionnel, si vous utilisez un service sans IP interne ou un service headless
