movie-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie-service
  ports:
  - protocol: TCP
    port: 8001   # Port externe (accessible de l'extérieur)
    targetPort: 8000  # Port interne du conteneur
  type: ClusterIP
