cast-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cast-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jhennebo.be
    http:
      paths:
      - path: /api/v1/casts/
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8000
